--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -418,6 +418,7 @@ html {
     margin-right: rem(44px);
     width: rem(58px);
     height: rem(58px);
+    //object-fit: scale-down;
   }
 
   &__text-block {
